--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <style>
+      *{
+        font-family: "Roboto", sans-serif;
+        margin: 0;
+      }
+    </style>
     <title>React App</title>
   </head>
   <body>
